@@ -3,10 +3,12 @@ package net.samagames.hydroangeas.client.servers;
 import com.google.gson.JsonElement;
 import net.samagames.hydroangeas.client.HydroangeasClient;
 import net.samagames.hydroangeas.client.tasks.ServerThread;
+import net.samagames.hydroangeas.common.protocol.intranet.MinecraftServerIssuePacket;
 import net.samagames.hydroangeas.common.protocol.intranet.MinecraftServerOrderPacket;
 import net.samagames.hydroangeas.utils.MiscUtils;
 
 import java.io.File;
+import java.io.IOException;
 import java.util.UUID;
 import java.util.logging.Level;
 
@@ -60,11 +62,21 @@ public class MinecraftServerC
             this.instance.getResourceManager().downloadServer(this, this.serverFolder);
             this.instance.getResourceManager().downloadMap(this, this.serverFolder);
             this.instance.getResourceManager().downloadDependencies(this, this.serverFolder);
-            this.instance.getResourceManager().patchServer(this, this.serverFolder, isCoupaingServer());
-        }
-        catch (Exception e)
+        } catch (Exception e)
         {
             this.instance.log(Level.SEVERE, "Can't make the server " + getServerName() + "!");
+            instance.getConnectionManager().sendPacket(new MinecraftServerIssuePacket(this.instance.getClientUUID(), this.getServerName(), MinecraftServerIssuePacket.Type.MAKE));
+            e.printStackTrace();
+            serverFolder.delete();
+            return false;
+        }
+
+        try
+        {
+            this.instance.getResourceManager().patchServer(this, this.serverFolder, isCoupaingServer());
+        } catch (IOException e)
+        {
+            instance.getConnectionManager().sendPacket(new MinecraftServerIssuePacket(this.instance.getClientUUID(), this.getServerName(), MinecraftServerIssuePacket.Type.PATCH));
             e.printStackTrace();
             serverFolder.delete();
             return false;
@@ -77,14 +89,11 @@ public class MinecraftServerC
     {
         try
         {
-            //this.instance.getLinuxBridge().mark2Start(this.serverFolder.getAbsolutePath()); //Old system
             serverThread = new ServerThread(this,
                     new String[]{"java",
                             "-Xmx1152M",
                             "-Xms512M",
                             "-Xmn256M",
-                            "-XX:PermSize=64M",
-                            "-XX:MaxPermSize=256M",
                             "-XX:-OmitStackTraceInFastThrow",
                             "-XX:SurvivorRatio=2",
                             "-XX:-UseAdaptiveSizePolicy",
@@ -101,8 +110,7 @@ public class MinecraftServerC
                     new String[]{""}, serverFolder);
             serverThread.start();
             instance.getLogger().info("Starting server " + getServerName());
-        }
-        catch (Exception e)
+        } catch (Exception e)
         {
             this.instance.log(Level.SEVERE, "Can't start the server " + getServerName() + "!");
             e.printStackTrace();
@@ -120,8 +128,7 @@ public class MinecraftServerC
         {
             //this.instance.getLinuxBridge().mark2Stop(getServerName());
             serverThread.forceStop();
-        }
-        catch (Exception e)
+        } catch (Exception e)
         {
             this.instance.log(Level.SEVERE, "Can't stop the server " + getServerName() + "!");
             e.printStackTrace();
@@ -188,7 +195,8 @@ public class MinecraftServerC
         return this.coupaingServer;
     }
 
-    public HydroangeasClient getInstance() {
+    public HydroangeasClient getInstance()
+    {
         return instance;
     }
 
